2003-11-14  Werner Koch  <wk@gnupg.org>

	* cms.c (write_encrypted_cont): Fixed test on EOF.
	* cert.c (ksba_cert_is_ca, ksba_cert_get_cert_policies) 
	(ksba_cert_get_auth_key_id): Ditto.
	* ber-decoder.c (_ksba_ber_decoder_dump) 
	(_ksba_ber_decoder_decode): Ditto.

2003-11-13  Werner Koch  <wk@gnupg.org>

	* ber-decoder.c (eof_or_error): Replaced READ_ERROR with a system
	provided error.
	* crl.c (parse_to_next_update): Ditto.
	* cms-parser.c (parse_cms_version): Ditto.
	(_ksba_cms_parse_signed_data_part_1): 
	* ber-help.c (eof_or_error): Ditto.
	* reader.c (ksba_reader_error): Changed to return gpg_error_t.
	* writer.c (ksba_writer_error): Ditto.

2003-11-12  Werner Koch  <wk@gnupg.org>

	* writer.c (do_writer_write): Replaced WRITE_ERROR by one
	generated from errno.

	* asn1-parse.y (ksba_asn_parse_file): Replaced FILE_ERROR by one
	generated from errno.

	* cms.c (ksba_cms_new): Changed Interface to return an error code.
	* name.c (ksba_name_new): Ditto.
	* writer.c (ksba_writer_new): Ditto.
	* reader.c (ksba_reader_new): Ditto.
	* certreq.c (ksba_certreq_new): Ditto.
	* crl.c (ksba_crl_new): Ditto.

	* ksba.h: Removed all KSBA_ error codes and replaced them all over
	the package by the gpg-error.h codes. Include gpg-error.h
	* mkerrors: Removed.
	* Makefile.am: Removed generation of errors.c
	* asn1-gentables.c (one_file): Simplified error printing
	* ksba-config.in (libs,cflags): Add values for gpg-error.  Remove
	duplicates.

2003-11-11  Werner Koch  <wk@gnupg.org>

	* cert.c (ksba_cert_new): Changed interface.

2003-10-31  Werner Koch  <wk@gnupg.org>

	Changed the representation of time.
	
	* ksba.h (ksba_isotime_t): New.
	* convert.h, cms.h, crl.h: Changed all data structure to use that
	new time object.
	* time.c (_ksba_asntime_to_epoch): Renamed to ..
	(_ksba_asntime_to_iso): .. this and rewrote for the new time format.
	(_ksba_asntime_from_epoch): Removed.  Was never used.
	(_ksba_assert_time_format, _ksba_copy_time, _ksba_cmp_time)